# javex

./: .credo.exs  .formatter.exs  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  checksum-Elixir.Javex.Native.exs  cliff.toml  mise.toml  mix.exs
.github/workflows/: ci.yml  release.yml
config/: config.exs
lib/: javex.ex
lib/javex/: application.ex  compile_error.ex  incompatible_provider_error.ex  module.ex  native.ex  plugin.ex  runtime.ex  runtime_error.ex
native/javex_nif/: Cargo.toml
native/javex_nif/src/: lib.rs
priv/: javy_plugin.wasm
test/: javex_test.exs  test_helper.exs
test/javex/: module_test.exs  runtime_test.exs
tmp/Javex.ModuleTest/test-write-2-and-read-1-a-module-loaded-from-disk-executes-end-to-end-17ca8aea/: module.jxm
tmp/Javex.ModuleTest/test-write-2-and-read-1-read-1-rejects-files-that-are-not-a-Javex-envelope-5a78ab1d/: garbage.jxm
tmp/JavexTest/test-round-trips-through-disk-735ace7b/: module.jxm
