[package]
name = "javex_nif"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false
rust-version = "1.91"

[lib]
name = "javex_nif"
path = "src/lib.rs"
crate-type = ["cdylib"]

# Rustler 0.30+ requires NIF version features so rustler_precompiled's
# build action can pick the right one via --features nif_version_2_XX.
[features]
default = ["nif_version_2_15"]
nif_version_2_15 = ["rustler/nif_version_2_15"]
nif_version_2_16 = ["rustler/nif_version_2_16"]
nif_version_2_17 = ["rustler/nif_version_2_17"]

[dependencies]
rustler = { version = "0.37", default-features = false }
wasmtime = "42"
wasmtime-wasi = "42"
javy-codegen = "4"
# Pin to the version javy-codegen 4.0.0 was built against; the 4.0.1
# patch release of deterministic-wasi-ctx bumped to wasmtime-wasi 43 and
# breaks the dep tree otherwise.
deterministic-wasi-ctx = "=4.0.0"
wasmparser = "0.244"
tokio = { version = "1", features = ["rt"] }
sha2 = "0.10"
anyhow = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
